# Spring-LoadedInvertedPendulum

./: .gitignore
matlab/: MDROM_sim.m  SLIP_sim.m
matlab/3D/: 3D_dynamics.m  dynamics.m  friction_cones.m  gait_cycle.m  gait_cycle_curve_fit.m  kinematics.m  math.mw  rotation_dynamics.m  rotations.m  torque.m  torque_analytical.mlx  torque_correct_leg_dir.m  toruqe.m
matlab/SimplerModels/: DoubleSupport.m  DoubleSupport_CEM.m  DoubleSupport_Control.m  DoubleSupport_Lagrange.m  DoubleSupport_Newton.m  SingleSupport.m  SpringMassDamper.m  SpringMassDamper_VectorField.m  SpringMassDamper_sim.m
matlab/SimplerModels/data/: plot_data.m
matlab/leg/: ankle_torque.m  leg_kinematics.py  leg_sampling.m  leg_sampling_air.m  leg_sampling_sinusoidal.m  leg_sampling_stationary.m  leg_sampling_vel_acc.m  leg_sensor.py
matlab/math/: Gradients.mw  MDROM_math.mw
matlab/misc/: SLIP_leg.m  SLIP_math.mlx  SpringMassDamper_sim.m  leg_sampling.m  leg_sensor.py
mujoco/: CMakeLists.txt
mujoco/models/: 3D_SLIP.urdf  3D_SLIP.xml
mujoco/models/urdf/: 3D_SLIP.urdf
mujoco/models/xml/: 2D_SLIP.xml  3D_SLIP.xml  achilles.xml
mujoco/scripts/: sim_2D_SLIP.py  sim_3D_SLIP.py  test.py
mujoco/src/: test.cpp
mujoco/utils/: visualize_urdf.py
parallelization/: misc_test_with_jax.py  plot_data.m  slip_prop.py  slip_prop_jax.py  test_no_jax.py  test_with_jax.py
parallelization/data/: compare.py
performance/: CMakeLists.txt  README.MD
performance/config/: config.yaml
performance/inc/: control.h  dynamics.h  types.h
performance/scripts/: plot_data.m
performance/src/: control.cpp  dynamics.cpp  main.cpp
prototype/: MDROM.m  MDROM.py  MDROM_single.py  SLIP.py  plot_data.m  plot_data_single.m  plot_data_slip.m
